added couple more tryouts

--- a/atvp-400-auto.html
+++ b/atvp-400-auto.html
@@ -6,11 +6,7 @@
 <link href="http://fonts.googleapis.com/css?family=Terminal+Dosis:200,400,700" rel="stylesheet">
 <style>
 	@viewport {
-	width: auto;
-	}
-	@media screen and (min-resolution: 2dppx) {
-	h1 {color: red;}
-	body {background-size: 50% !important;}
+	width: 400px auto;
 	}
 </style>
 <link href="style.css" rel="stylesheet">
