--- a/atvp-auto-land.html
+++ b/atvp-auto-land.html
@@ -6,7 +6,8 @@
 <link href="http://fonts.googleapis.com/css?family=Terminal+Dosis:200,400,700" rel="stylesheet">
 <style>
 	@viewport {
-	width: device-width;
+	width: auto;
+	orientation: landscape;
 	}
 </style>
 <link href="style.css" rel="stylesheet">
