--- a/tc-picturefill/art-withsrc.html
+++ b/tc-picturefill/art-withsrc.html
@@ -42,7 +42,7 @@
 		</div>
 		<picture>
 			<source media="(min-width: 1024px)" srcset="opera-big.jpg">
-			<img srcset="opera-small.jpg" alt="The Oslo Opera House">
+			<img src="opera-small.jpg" alt="The Oslo Opera House">
 		</picture>
 		<output></output>
 		<p>Note: you may have to refresh the page after resizing!</p>
